fix: align source control dropdown button width with vscode

--- a/static/css/parts/Button.css
+++ b/static/css/parts/Button.css
@@ -42,8 +42,9 @@
 }
 
 .SplitButtonDropDown {
-  width: 30px;
+  width: 25px;
   height: 100%;
   contain: strict;
   cursor: pointer;
+  border-right: 1px solid transparent;
 }
